tests/fixtures/valid/imports/import_alias_external_call.pine
//@version=6
indicator("Import")
import user/Lib/1 as lib
x = lib.someFunction(close)
plot(close)
