tests/fixtures/invalid/semantic/import_alias_conflict.pine
//@version=6
indicator("Bad")
import user/lib/1 as math
x = math.foo()
